--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Dive Project - Дайвинг клуб</title>
   		<meta name="keywords" content="обучение дайвингу, дайвинг, маска, ласты, регулятор, Open Water, OWD, путешествия, необычный подарок, Advanced Diving, пещерный дайвинг, технический дайвинг, Cave Diving, Tech Diving">
- 		<meta name="description" content="В клубе исследователей и путешественников Dive Project, Вы можете обучиться дайвингу от начального до технического и пещерного уровней, встретить единомышленников и, самое главное, познать себя, отдохнуть и душой и телом, прикоснувшись к удивительному подводному миру.">
+ 		<meta name="description" content="В клубе исследователей и путешественников Dive Project, Вы можете обучиться дайвингу от начального до технического и пещерного уровней, встретить единомышленников и, самое главное, расширить границы своего сознания путем повышения контроля над собственным телом.">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -13,10 +13,16 @@
 	<body class="is-preload">
 			<div id="page-wrapper">
 					<div id="wrapper">
+						<!-- RedConnect -->
+<script id="rhlpscrtg" type="text/javascript" charset="utf-8" async="async"
+src="https://web.redhelper.ru/service/main.js?c=tech8"></script>
+<div style="display: none"><a class="rc-copyright"
+href="http://redconnect.ru">Сервис обратного звонка RedConnect</a></div>
+<!--/RedConnect -->
 							<section class="panel banner right">
 								<div class="content color4 span-3-75">
 									<h1 class="major">Dive Project</h1><br />
-									<p>В клубе исследователей и путешественников Dive Project, Вы можете обучиться дайвингу от начального до технического и пещерного уровней, встретить единомышленников и, самое главное, познать себя, отдохнуть и душой и телом, прикоснувшись к удивительному подводному миру. </p>
+									<p>В клубе исследователей и путешественников <strong>Dive Project</strong>, Вы можете обучиться дайвингу от начального до технического и пещерного уровней, встретить единомышленников и, самое главное, расширить границы своего сознания путем повышения контроля над собственным телом.</p>
 									<ul class="actions">
 										<li><a href="#first" class="button primary color4 circle icon fa-angle-right">Next</a></li>
 									</ul>
@@ -82,13 +88,13 @@
 								<div class="content span-5">
 									<h2 class="major">Open Water Diver</h2>
                                                                         <h4>Самостоятельное погружение под воду.</h4>
-									<p>Вы научитесь, используя профессиональное подводное снаряжение, самостоятельно и безопасно погружаться под воду на глубину до 18 метров.</br> 
-В рамках курса происходит освоение навыков подводного плавания с аквалангом. </br>После успешного прохождения экзамена выдается сертификат «Open Water Diver», позволяющий совершать погружения с напарником в любой точке земного шара.</p>
-									       <h5>Длительность: от 2-х  до 14 дней</h5> 
+									<p>Вы научитесь, используя профессиональное подводное снаряжение, самостоятельно и безопасно погружаться под воду на глубину до 18 метров. </br>В рамках курса происходит освоение навыков подводного плавания с аквалангом.</br>
+После успешного прохождения экзамена выдается сертификат «Open Water Diver», позволяющий совершать погружения с напарником в любой точке земного шара.</p>
+									       <h5>Длительность: от 2-х до 14 дней</h5>
 										<ul>
-											<li>5 теоретических занятий</li> 
-											<li>5 практических занятий в бассейне</li> 
-											<li>4 погружения в открытой воде</li> 
+											<li>5 теоретических занятий</li>
+											<li>5 практических занятий в бассейне</li>
+											<li>4 погружения в открытой воде</li>
 										</ul>
 								</div>
 								<div class="image tinted" data-position="top right">
@@ -97,13 +103,13 @@
 							</section>
 							<section class="panel">
 								<div class="intro color2">
-									       <h5>Включено:</h5> 
+									       <h5>Включено:</h5>
 										<ul>
-											<li>Прокат снаряжения</li> 
-											<li>Учебные материалы</li> 
-											<li>Погружения в открытой воде</li> 
-											<li>Сертификат</li> 
-											<li>Диплом</li> 
+											<li>Прокат снаряжения</li>
+											<li>Учебные материалы</li>
+											<li>Погружения в открытой воде</li>
+											<li>Сертификат</li>
+											<li>Диплом</li>
 										</ul>
 										<h5>Стоимость: 18 500 рублей</h5>
 										</br>
@@ -123,7 +129,7 @@
 								<div class="intro color0">
 									<h2 class="major">Идея для подарка!</h2>
                                                                         <h4>Незабываемые эмоции для Ваших близких</h4>
-									<p>Впечатления от соприкосновения с подводным миром остаются в памяти навсегда. Подарите бесценный «подарок на всю жизнь» самым дорогим людям!</p>
+									<p>Впечатления от соприкосновения с подводным миром навсегда остаются в памяти. Подарите бесценный «подарок на всю жизнь» самым дорогим людям!</p>
 										</br>
 										<ul class="actions">
 											<li><a href="tel:+7-925-508-79-98" class="button primary color0">Заказать!</a></li>
@@ -135,10 +141,10 @@
 									<h2 class="major">Advanced Open Water</h2>
                                                                         <h4>Совершенство владения навыками подводных погружений.</h4>
 									<p>Под руководством профессионалов быстро и эффективно Вы приобретете знания и опыт, расширите пределы своих погружений до 30 метров и безопасно освоите навыки подводного плавания с аквалангом в различных природных условиях.</p>
-									       <h5>Длительность: от 2-х до 7 дней</h5> 
+									       <h5>Длительность: от 2-х до 7 дней</h5>
 										<ul>
-											<li>5 теоретических занятий</li> 
-											<li>5 погружения в открытой воде</li> 
+											<li>5 теоретических занятий</li>
+											<li>5 погружения в открытой воде</li>
 										</ul>
 								</div>
 								<div class="image tinted" data-position="top right">
@@ -147,13 +153,13 @@
 							</section>
 							<section class="panel">
 								<div class="intro color2">
-									       <h5>Включено:</h5> 
+									       <h5>Включено:</h5>
 										<ul>
-											<li>Прокат снаряжения</li> 
-											<li>Учебные материалы</li> 
-											<li>Погружения в открытой воде</li> 
-											<li>Сертификат</li> 
-											<li>Диплом</li> 
+											<li>Прокат снаряжения</li>
+											<li>Учебные материалы</li>
+											<li>Погружения в открытой воде</li>
+											<li>Сертификат</li>
+											<li>Диплом</li>
 										</ul>
 										<h5>Стоимость: 12 500 рублей</h5>
 										</br>
@@ -173,8 +179,8 @@
 							</section>
 							<section class="panel">
 								<div class="intro color2">
-									       <h5>Программа согласовывается индвидуально.</h5> 
-									       <p>Необходимые требования: навык владения сухим костюмом.</p> 
+									       <h5>Программа согласовывается индвидуально.</h5>
+									       <p>Необходимые требования: навык владения сухим костюмом.</p>
 
 										<ul class="actions">
 											<li><a href="tel:+7-925-508-79-98" class="button primary color2">Записаться</a></li>
@@ -184,12 +190,12 @@
 								<div class="content span-5">
 									<h2 class="major">Dry Suit</h2>
                                                                         <h4>Дайвинг круглый год в любую погоду.</h4>
-									<p>Вы научитесь навыкам и приемам необходимым для комфортного и безопасного погружения в сухом костюме в любых климатических условиях. Вам больше никогда не будет холодно. После успешного окончания курса выдается сертификат "Dry Suit Diver" и настенный диплом.</p>
-									       <h5>Длительность: от 1 до 4-х дней</h5> 
+									<p>Вы научитесь навыкам и приемам необходимым для комфортного и безопасного погружения в сухом костюме в любых климатических условиях. Вам больше никогда не будет холодно. После успешного окончания выдается сертификат "Dry Suit Diver" и настенный диплом.</p>
+									       <h5>Длительность: от 1 до 4-х дней</h5>
 										<ul>
-											<li>1 теоретическое занятие</li> 
-											<li>1 практическое занятие в бассейне</li> 
-											<li>2 погружения в открытой воде</li> 
+											<li>1 теоретическое занятие</li>
+											<li>1 практическое занятие в бассейне</li>
+											<li>2 погружения в открытой воде</li>
 										</ul>
 								</div>
 								<div class="image tinted" data-position="top right">
@@ -198,13 +204,13 @@
 							</section>
 							<section class="panel">
 								<div class="intro color2">
-									       <h5>Включено:</h5> 
+									       <h5>Включено:</h5>
 										<ul>
-											<li>Прокат снаряжения</li> 
-											<li>Учебные материалы</li> 
-											<li>Погружения в открытой воде</li> 
-											<li>Сертификат</li> 
-											<li>Диплом</li> 
+											<li>Прокат снаряжения</li>
+											<li>Учебные материалы</li>
+											<li>Погружения в открытой воде</li>
+											<li>Сертификат</li>
+											<li>Диплом</li>
 										</ul>
 										<h5>Стоимость: 9 000 рублей</h5>
 										</br>
@@ -224,15 +230,15 @@
 							</section>
 							<section class="panel">
 								<div class="intro color2">
-									       <h5>Программа согласовывается после собеседования.</h5> 
-									       Необходимые требования: 
+									<h5>Программа согласовывается после собеседования.</h5>
+									Необходимые требования:
 <ul>
 <li>навык владения сухим костюмом.</li>
 </ul>
-									Желательные условия:
+					 Желательные условия:
 <ul>
 <li>уровень подготовки - технический дайвер.</li>
-</ul> 
+</ul>
 
 										<ul class="actions">
 											<li><a href="tel:+7-925-508-79-98" class="button primary color2">Записаться</a></li>
@@ -242,23 +248,24 @@
 							<section class="panel color4-alt" id="end">
 								<div class="intro color4">
 									<h2 class="major">Контакты</h2>
-									<h9>125009 Москва, </br>Тверская ул. д. 12, стр. 8</h9> </br>
+									<h9>125009 Москва, <br>Тверская ул. д. 12, стр. 8</h9> <br>
 									<h9>Время работы: Круглосуточно</h9>
-                                                                          </br>
+                                                                          <br>
 									<h9>Телефоны:</h9>
 									<h9>+7 (495) 648-61-84</h9>
-									<h9>+7 (925) 508-79-98 </br>WhatsApp, Telegram, Viber</h9>
+									<h9>+7 (925) 508-79-98 <br>WhatsApp, Telegram, Viber</h9>
                                                                           </br>
 									<h9>E-mail:</h9>
-									<h9>dive-project@mail.ru</h9>
+									<h9><a href="mailto:dive-project@mail.ru">dive-project@mail.ru</a></h9>
                                                                           </br>
 								<ul class="icons">
 											<li><a href="https://youtube.com/user/diveprojectvideo" target="_blank" class="icon fa-youtube"><span class="label">Youtube</span></a></li>
+											<li><a href="https://www.instagram.com/dive_project/" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 											<li><a href="https://facebook.com/DiveEducation/" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 								</ul>
-                                                                          
+
                                                                         </div>
-	
+
 							</section>
 					</div>
 
@@ -267,5 +274,20 @@
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/main.js"></script>
+			<!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+   ym(57649291, "init", {
+        clickmap:true,
+        trackLinks:true,
+        accurateTrackBounce:true,
+        webvisor:true
+   });
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/57649291" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
 	</body>
 </html>
