--- a/call.html
+++ b/call.html
@@ -35,9 +35,9 @@
 							</section>
 							<section class="panel color2-alt" id="end">
 								<div class="intro color2">
-									<h2 class="major">Контакты</h2>
-									<h9>Москва, Тверская ул. д. 12, стр. 8</h9>
-									<h9>Время работы: Круглосуточно</h9>
+									<h2 class="major">Информация</h2>
+									<h4>Стоимость тура: 2950$</h4>
+									<h9><a target="_blank" href="assets/diving_tour_cuba.pdf">Ознакомиться с программой</a></h9>
 																																					</br>
 									<h9>Телефон:</h9>
 									<h9>+7 (925) 508-79-98</h9>
@@ -50,7 +50,8 @@
 											<li><a href="https://www.facebook.com/events/2790813900954436/" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 											<li><a href="https://www.instagram.com/dive_project/" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 											<li><a href="https://www.dive-project.ru/" target="_blank" class="icon fa-globe"><span class="label">Dive-project</span></a></li>
-								</ul></br>
+								</ul>
+								</br>
 
 																																				</div>
 
